<resources>
    <string name="app_name">Carista</string>
    <string name="tab_text_1">Posts</string>
    <string name="tab_text_2">Upload</string>
    <string name="posts_fragment_title">Posts</string>
    <string name="carista_post">Carista</string>

    <string name="api_root" translatable="false">http://192.168.1.65:5000/</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="tab_text_3">User</string>
    <string name="tab_text_4">Admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="theme">Switch Theme</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="select_image">Capture or select</string>
    <string name="error_getting_image">Error selecting image</string>
    <string name="insert_title">Insert title!</string>
    <string name="failed_to_upload">Failed to upload image</string>
    <string name="failed_to_upload_pack">Failed to upload pack</string>
    <string name="failed_to_upload_sticker">Failed to upload sticker</string>
    <string name="new_upload_title">Post title</string>
    <string name="dummy_upload">Upload a new post</string>
    <string name="stickers_upload">Upload a new sticker</string>
    <string name="packs_upload">Upload a new pack</string>
    <string name="sticker_title">Sticker title</string>
    <string name="pack_title">Pack title</string>
    <string name="sticker_name">Sticker name</string>
    <string name="label_brush">Brush</string>
    <string name="label_text">Text</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="msg_save_image">Save image</string>
    <string name="label_eraser_mode">Ereaser mode</string>
    <string name="label_filter">Filter</string>
    <string name="msg_save_image_to_share">Save to share image</string>
    <string name="msg_share_image">Share image</string>
    <string name="success_upload">Post uploaded!</string>
    <string name="network_unavailable">Network unavailable, loading from cache</string>
    <string name="dark_theme_enabled">DarkTheme</string>
    <string name="dark_theme_pref">DarkThemePref</string>
    <string name="change_nickname">Tap on the welcome message to change your nickname</string>
    <string name="username">Username</string>
    <string name="change">Change</string>
    <string name="new_nickname">New Nickname</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="exit_editor_confirm_message">Do you really want to quit?</string>
    <string name="continue_editing">Continue editing</string>
    <string name="discard">Discard</string>

    <string name="edit_shortcut_short_label">Editor</string>
    <string name="edit_shortcut_long_label">Editor</string>
    <string name="user_shortcut_short_label">Me</string>
    <string name="user_shortcut_long_label">Me</string>
    <string name="check_for_update">Check for updates</string>
    <string name="already_on_latest_update">You are already using the latest version of the app!</string>
    <string name="update">Update</string>
    <string name="new_update_available">A new update available (%1$s)\nWould you like to install it?</string>
    <string name="an_error_has_occurred">An error has occurred!</string>
    <string name="comments_title">Comments</string>
    <string name="post_comment_here">Add a comment...</string>
    <string name="comment_posted_success">Comment posted successfully!</string>
    <string name="login_error">Error logging in!</string>
    <string name="only_you_like_this">Only you like this</string>
    <string name="post_view_title">Single Post View</string>
    <string name="post_link">https://carista.web.app/post/</string>
    <string name="copied_to_clipboard">Copied link to clipboard!</string>
    <string name="share_post_root_url">https://carista.web.app/post/</string>
    <string name="uploading">Upload...</string>
    <string name="title">Title</string>
    <string name="permission_granted">Permission has been granted!</string>
    <string name="permission_denied">You need to grant permission!</string>
    <string name="intro_welcome">Welcome</string>
    <string name="intro_welcome_description">Welcome to Carista community!</string>
    <string name="intro_posts">Posts</string>
    <string name="intro_posts_description">Upload, Share, and Explore posts!</string>
    <string name="intro_editor">Editor</string>
    <string name="intro_editor_description">Edit your images</string>
    <string name="add_extracted_text">Image contains text, add them?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_packName">Tap on the pack\'s name to update it</string>
    <string name="change_stickerName">Tap on the sticker to update it</string>
    <string name="success_packUpload">Pack uploaded</string>
    <string name="success_stickerUpload">Sticker uploaded</string>
    <string name="new_packname">New pack name</string>
    <string name="deletePack">Delete</string>
    <string name="new_stickername">New sticker name</string>
    <string name="deleteStickerPack">Yes</string>
    <string name="deleteSticker">Delete sticker</string>
    <string name="delete_sticker_confirm_message">Are you sure you want to delete this sticker ?</string>
    <string name="delete_pack_confirm_message">Are you sure you want to delete this pack ?</string>
    <string name="doNotDeletePack">No</string>
</resources>