<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/packs_upload"
            android:gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textSize="30dp"
            />

        <EditText
            android:id="@+id/sticker_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/upload_edit_text"
            android:hint="@string/pack_title"
            android:maxLines="4"
            android:textColor="@color/black"
            android:textColorHint="#918B8B"
            android:textSize="20dp"
            android:textAlignment="center"
            />

        <ImageView
            android:id="@+id/new_sticker_icon"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="10dp"
            android:background="@drawable/upload_edit_text" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp"
            android:gravity="center">
            <Button
                android:layout_alignParentStart="true"
                android:id="@+id/new_sticker_choose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/choose"
                android:textAllCaps="false"
                android:backgroundTint="@color/purple_500"
                />

            <Button
                android:layout_alignParentEnd="true"
                android:id="@+id/new_sticker_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/upload"
                android:textAllCaps="false"
                android:layout_marginLeft="20dp"
                android:backgroundTint="@color/purple_700"
                />
        </RelativeLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>






